--- a/public/admin/addacell/addacell.html
+++ b/public/admin/addacell/addacell.html
@@ -1,164 +1,231 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>CeAbaranje || Dashboard/EditProfile</title>
+    <link rel="icon" href="../src/favicon.ico" />
+    <link rel="stylesheet" href="../defaultdashboard.css" />
+    <link rel="stylesheet" href="./addacell.css" />
+    <link rel="stylesheet" href="../../annimations.css" />
+    <link rel="stylesheet" href="../../root.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Playfair+Display:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://site-assets.fontawesome.com/releases/v6.5.2/css/all.css"
+    />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CeAbaranje || Dashboard/EditProfile</title>
-  <link rel="icon" href="../src/favicon.ico">
-  <link rel="stylesheet" href="../defaultdashboard.css">
-  <link rel="stylesheet" href="./addacell.css">
-  <link rel="stylesheet" href="../../annimations.css">
-  <link rel="stylesheet" href="../../root.css">
-  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.5.2/css/all.css">
-</head>
-
-<body>
-  <div class="loader">
-    <div class="inner-loader"></div>
-  </div>
-  <main class="sub-body">
-    <div class="prompt-parent hidden" id="message-prompt">
-      <div class="success-prompt">
-        <i class="fa-solid fa-spinner-third fa-2xl" id="message-sign"></i>
-        <h2 id="message-text"></h2>
-      </div>
+  <body>
+    <div class="loader">
+      <div class="inner-loader"></div>
     </div>
-    <main class="dashboard-sub-body">
-      <nav class="vertical-navbar">
-        <div class="vertical-navbar-box">
-          <div class="nocssneeded">
-            <div class="user-details">
-              <i id="CloseDrawer" class="fa-solid fa-xmark closeIcon"></i>
-              <div class="admin-profile-icon">
-                <span class="greeting-user">    
-                  <i class="fa-duotone fa-user fa-2xl"></i>
-                </span>
-                <span>
-                  <p class="userGreeting" id="usersdetails">Admin</p>
-                </span>
-              </div>
-              <span class="edit-profile hidden">
-                <i class="fa-duotone fa-user-pen"></i>
-                <a href="/admin/">Edit Profile</a>
-              </span>
-            </div>
-            <div class="edit-profile"></div>
-            <div class="navbar-list-items">
-              <ul class="dashboard-links">
-                <a href="/admin/overview">
-                  <li class="dashboard-items"><i class="fa-duotone fa-solid fa-tachograph-digital"></i>
-                    <p>Overview</p>
-                  </li>
-                </a>
-                <a href="/admin/addacell">
-                  <li class="dashboard-items"><i class="fa-solid fa-circle-plus"></i>
-                    <p>Add a cell</p>
-                  </li>
-                </a>
-                <a href="/admin/view-users">
-                  <li class="dashboard-items"><i class="fa-duotone fa-solid fa-users"></i>
-                    <p>View Users</p>
-                  </li>
-                </a>
-                <a href="/admin/view-cell-reports">
-                  <li class="dashboard-items"><i class="fa-duotone fa-solid fa-chart-bar"></i>
-                    <p>View Cell Reports</p>
-                  </li>
-                </a>
-                <a href="/admin/souls-won">
-                  <li class="dashboard-items"><i class="fa-duotone fa-solid fa-trophy"></i>
-                    <p>Souls Won</p>
-                  </li>
-                </a>
-                <a href="/admin/schedule-service">
-                  <li class="dashboard-items"><i class="fa-duotone fa-solid fa-calendar-days"></i>
-                    <p>Schedule Service</p>
-                  </li>
-                </a>
-                <a href="/admin/messages">
-                  <li class="dashboard-items"><i class="fa-solid fa-paper-plane-top"></i>
-                    <p>Messages</p>
-                  </li>
-                </a>
-                <!-- <li class="dashboard-items></li> -->
-              </ul>
-            </div>
-          </div>
-          <div class="left-dashboard-bottom">
-            <div class="logout-parent" id="Logout-Button">
-              <div class="logout-button">
-                <button class="button" id=""><i class="fa-duotone fa-right-from-bracket fa-lg"></i>Logout</button>
-              </div>
-            </div>
-          </div>
+    <main class="sub-body">
+      <div class="prompt-parent hidden" id="message-prompt">
+        <div class="success-prompt">
+          <i class="fa-solid fa-spinner-third fa-2xl" id="message-sign"></i>
+          <h2 id="message-text"></h2>
         </div>
-      </nav>
-      <section class="dashboard-content">
-        <div class="dashboard-content-box">
-          <div class="dashboard-content-title">
-            <button class="drawerIcon" id="DrawerIcon">≡</button>
-            <a href="javascript:history.back()" class="go-back">
-              <i class="fa-duotone fa-arrow-left"></i>
-              <!-- <i class="fa-duotone fa-solid fa-house"></i> -->
-            </a>
-            <h1>New Cell</h1>
-          </div>
-          <div class="empty-div"></div>
-          <div class="overview">
-            <form action="" method="post" id="addacellform" class="form-container">
-              <div class="left-group">
-                <div class="form-group">
-                  <input type="text" placeholder="" name="NameOfLeader" id="NameOfLeader" required>
-                  <label for="NameOfLeader">Name Of Leader</label>
-                </div>
-                <div class="form-group">
-                  <input type="phone" placeholder="" name="PhoneNumber" id="PhoneNumber" required>
-                  <label for="PhoneNumber">Phone Number</label>
-                </div>
-                <div class="form-group">
-                  <select type="text" placeholder="" name="LeaderPosition" id="LeaderPosition" required>
-                    <option value="NoSelect" hidden>Select an option</option>
-                    <option value="CO-ORDINATOR">CO-ORDINATOR</option>
-                    <option value="PCF">PCF LEADER</option>
-                    <option value="SENIOR-CELL">SENIOR-CELL LEADER</option>
-                    <option value="CELL">CELL LEADER</option>
-                  </select>
-                  <label for="LeaderPosition">Leader Position</label>
-                </div>
-                <div class="form-group">
-                  <select type="text" placeholder="" name="CellType" id="CellType" required>
-                    <option value="NoSelect" hidden>Select an option</option>
-                    <option value="PCF">PCF</option>
-                    <option value="SENIOR-CELL">SENIOR-CELL</option>
-                    <option value="CELL">CELL</option>
-                  </select>
-                  <label for="CellType">Cell Type</label>
-                </div>
-                <div class="form-group hidden" id="pcf-name">
-                  <input type="text" placeholder="" name="NameOfPcf" id="NameOfPcf" required>
-                  <label for="NameOfPcf">Name of PCF</label>
-                </div>
-                <div class="form-group hidden" id="senior-cell-name">
-                  <input type="text" placeholder="" name="NameOfSeniorCell" id="NameOfSeniorCell" required>
-                  <label for="NameOfSeniorCell">Name Of Senior Cell</label>
-                </div>
-                <div class="form-group hidden" id="cell-name">
-                  <input type="text" placeholder="" name="NameOfCell" id="NameOfCell" required/>
-                  <label for="NameOfCell">Name Of Cell</label>
+      </div>
+      <main class="dashboard-sub-body">
+        <nav class="vertical-navbar">
+          <div class="vertical-navbar-box">
+            <div class="nocssneeded">
+              <div class="user-details">
+                <i id="CloseDrawer" class="fa-regular fa-xmark closeIcon"></i>
+                <div class="admin-profile-icon">
+                  <span class="greeting-user">
+                    <i class="fa-duotone fa-user fa-2xl"></i>
+                  </span>
+                  <span>
+                    <p class="userGreeting" id="usersdetails">Admin</p>
+                  </span>
                 </div>
               </div>
-            </form>
-            <div class="parent-button">
-              <button type="submit" id="submitnewcellbutton" class="submitreportbutton">Submit</button>
+              <hr />
+              <div class="navbar-list-items">
+                <ul class="dashboard-links">
+                  <a href="/admin/overview">
+                    <li class="dashboard-items">
+                      <i class="fa-regular fa-tachograph-digital"></i>
+                      <p>Overview</p>
+                    </li>
+                  </a>
+                  <a href="/admin/view-users">
+                    <li class="dashboard-items">
+                      <i class="fa-regular fa-user-group"></i>
+                      <p>Users</p>
+                    </li>
+                  </a>
+                  <a href="/admin/view-cells-leaders">
+                    <li class="dashboard-items">
+                      <i class="fa-regular fa-users"></i>
+                      <p>Leaders</p>
+                    </li>
+                  </a>
+                  <a href="/admin/addacell">
+                    <li class="dashboard-items">
+                      <i class="fa-regular fa-circle-plus"></i>
+                      <p>New Cell</p>
+                    </li>
+                  </a>
+                  <a href="/admin/view-cell-reports">
+                    <li class="dashboard-items">
+                      <i class="fa-regular fa-chart-bar"></i>
+                      <p>Cell Reports</p>
+                    </li>
+                  </a>
+                  <a href="/admin/souls-won">
+                    <li class="dashboard-items">
+                      <i class="fa-regular fa-trophy"></i>
+                      <p>Souls Won</p>
+                    </li>
+                  </a>
+                  <a href="/admin/schedule-service">
+                    <li class="dashboard-items">
+                      <i class="fa-regular fa-calendar-days"></i>
+                      <p>Schedule Service</p>
+                    </li>
+                  </a>
+                  <a href="/admin/messages">
+                    <li class="dashboard-items">
+                      <i class="fa-regular fa-paper-plane-top"></i>
+                      <p>Messages</p>
+                    </li>
+                  </a>
+                </ul>
+              </div>
+            </div>
+            <div class="left-dash-footer">
+              <div class="logout-parent" id="Logout-Button">
+                <div class="logout-button">
+                  <button class="button" id="" type="button">
+                    <i class="fa-solid fa-right-from-bracket fa-lg"></i>Logout
+                  </button>
+                </div>
+              </div>
             </div>
           </div>
-        </div>
-      </section>
+        </nav>
+        <section class="dashboard-content">
+          <div class="dashboard-content-box">
+            <div class="dashboard-content-title">
+              <button class="drawerIcon" id="DrawerIcon">≡</button>
+              <a href="javascript:history.back()" class="go-back">
+                <i class="fa-duotone fa-solid fa-arrow-left"></i>
+                <!-- <i class="fa-duotone fa-solid fa-house"></i> -->
+              </a>
+              <h1>New Cell</h1>
+            </div>
+            <div class="empty-div"></div>
+            <div class="overview">
+              <form
+                action=""
+                method="post"
+                id="addacellform"
+                class="form-container"
+              >
+                <div class="left-group">
+                  <div class="form-group">
+                    <input
+                      type="text"
+                      placeholder=""
+                      name="NameOfLeader"
+                      id="NameOfLeader"
+                      required
+                    />
+                    <label for="NameOfLeader">Name Of Leader</label>
+                  </div>
+                  <div class="form-group">
+                    <input
+                      type="phone"
+                      placeholder=""
+                      name="PhoneNumber"
+                      id="PhoneNumber"
+                      required
+                    />
+                    <label for="PhoneNumber">Phone Number</label>
+                  </div>
+                  <div class="form-group">
+                    <select
+                      type="text"
+                      placeholder=""
+                      name="LeaderPosition"
+                      id="LeaderPosition"
+                      required
+                    >
+                      <option value="NoSelect" hidden>Select an option</option>
+                      <option value="CO-ORDINATOR">CO-ORDINATOR</option>
+                      <option value="PCF">PCF LEADER</option>
+                      <option value="SENIOR-CELL">SENIOR-CELL LEADER</option>
+                      <option value="CELL">CELL LEADER</option>
+                    </select>
+                    <label for="LeaderPosition">Leader Position</label>
+                  </div>
+                  <div class="form-group">
+                    <select
+                      type="text"
+                      placeholder=""
+                      name="CellType"
+                      id="CellType"
+                      required
+                    >
+                      <option value="NoSelect" hidden>Select an option</option>
+                      <option value="PCF">PCF</option>
+                      <option value="SENIOR-CELL">SENIOR-CELL</option>
+                      <option value="CELL">CELL</option>
+                    </select>
+                    <label for="CellType">Cell Type</label>
+                  </div>
+                  <div class="form-group hidden" id="pcf-name">
+                    <input
+                      type="text"
+                      placeholder=""
+                      name="NameOfPcf"
+                      id="NameOfPcf"
+                      required
+                    />
+                    <label for="NameOfPcf">Name of PCF</label>
+                  </div>
+                  <div class="form-group hidden" id="senior-cell-name">
+                    <input
+                      type="text"
+                      placeholder=""
+                      name="NameOfSeniorCell"
+                      id="NameOfSeniorCell"
+                      required
+                    />
+                    <label for="NameOfSeniorCell">Name Of Senior Cell</label>
+                  </div>
+                  <div class="form-group hidden" id="cell-name">
+                    <input
+                      type="text"
+                      placeholder=""
+                      name="NameOfCell"
+                      id="NameOfCell"
+                      required
+                    />
+                    <label for="NameOfCell">Name Of Cell</label>
+                  </div>
+                </div>
+              </form>
+              <div class="parent-button">
+                <button
+                  type="submit"
+                  id="submitnewcellbutton"
+                  class="submitreportbutton"
+                >
+                  Submit
+                </button>
+              </div>
+            </div>
+          </div>
+        </section>
+      </main>
     </main>
-  </main>
-  <script defer src="/admin/addacell/addacell.js"></script>
-</body>
-
+    <script defer src="/admin/addacell/addacell.js"></script>
+  </body>
 </html>
